syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderResponse {
	float temp_C = 1;
	float temp_F = 2;
	float temp_K = 3;
}

message WeatherLocationRequest {
    string place = 1;
}

service WeatherService {
  rpc GetLocationTemperature(WeatherLocationRequest) returns (CreateOrderResponse);
}